# uc-intg-unifi

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
intg_unifi/: __init__.py  __main__.py  camera.py  config.py  device.py  driver.py  poe.py  remote.py  setup_flow.py  wan.py
