[project]
name = "uc-intg-unifi"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "ucapi>=0.5.2",
    "ucapi-framework>=1.8.4",
    "aiohttp>=3.10.0",
    "Pillow>=10.0.0",
]

[tool.setuptools]
packages = ["intg_unifi"]

[tool.setuptools.dynamic]
version = {attr = "intg_unifi.__version__"}

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
